--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -216,6 +216,7 @@ Z/* START CONTENT MANAGEMENT CSS*/
   width: 130px;
   border-radius: 20px;
   justify-content: center;
+  margin-right: 20px;
 }
 
 .third_layer {
@@ -1099,7 +1100,7 @@ td {
   
   width: 85%;
   height: auto;
-  border-radius: 0px 0px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin: auto;
