--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -68,6 +68,7 @@ header ul li {
   list-style: none;
   text-align: center;
   display: none;
+  font-size: 1rem;
 }
 @media (min-width: 375px) {
   header ul li {
