--- a/Kapstondaw/capstone-frontend/scss/layout/_index.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_index.scss
@@ -13,7 +13,11 @@
 @forward "hotlines";
 @forward "footer";
 @forward "copyright";
+
+// other pages
+@forward "login";
 @forward "main-announcement";
+@forward "cart";
 
 @forward "active-menu";
 @forward "active-login";
